[tool.poetry]
name = "cleanusb"
version = "0.1.0"
description = "Clean up dotfiles and organize music on a USB stick."
authors = ["Tom Shafer <tom@tshafer.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
mutagen = "^1.46.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
flake8 = "^6.0.0"
pytest = "^7.2.1"
black = "^23.1.0"

[tool.poetry.scripts]
cleanusb = "cleanusb:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
